/*
 * Copyright (c) 2021. Linkit and or its affiliates. All rights reserved.
 * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR FILE HEADERS.
 *
 * This code is free software; you can only use it for personal uses, studies or documentation.
 * You can download this source code, and modify it ONLY FOR PERSONAL USE and you
 * ARE NOT ALLOWED to distribute your MODIFIED VERSION.
 * For any professional use, please contact me at overridelinkit@gmail.com.
 *
 * Please contact overridelinkit@gmail.com if you need additional information or have any
 * questions.
 */

plugins {
    id 'java-library'
    id 'scala'
    id 'maven-publish'
}

println("Running Linkit gradle script using java JDK: " + System.getProperty("java.version"))

group 'linkit'
version 'alpha-0.0.0'


subprojects {
    group = "fr.linkit"
    version = "alpha-0.0.0"

    apply plugin: 'java-library'
    apply plugin: 'scala'
    apply plugin: 'maven-publish'


    repositories {
        mavenCentral()
    }

    dependencies {
        implementation group: 'org.scala-lang', name: 'scala-library', version: '2.13.10'
        implementation group: 'org.jetbrains', name: 'annotations', version: '16.0.1'

        implementation 'org.apache.logging.log4j:log4j-core:2.17.2'
        implementation 'org.apache.logging.log4j:log4j-api:2.17.2'
    }

    task sourcesJar(type: Jar, dependsOn: classes) {
        classifier = 'sources'
        from sourceSets.main.allSource
    }


    artifacts {
        archives sourcesJar
    }

    test {
        useJUnitPlatform()
    }


    tasks.withType(ScalaCompile) {
        scalaCompileOptions.additionalParameters = [
                "-feature",
                "-language:implicitConversions",
                "-language:experimental.macros"
        ]
    }

    tasks.withType(JavaCompile) {
        it.options.compilerArgs.add('--enable-preview')
        sourceCompatibility = '19'
        targetCompatibility = '19'
    }
}

wrapper {
    gradleVersion = "7.5.1"
    distributionType = Wrapper.DistributionType.ALL
}
